[metadata]
name = mobilephonenetworkanalysis
version = 0.1
description = Mobile Phone Network Analysis support library
long_description = ""
long_description_content_type = text/markdown
author = Dominic Kempf
author_email = ssc@iwr.uni-heidelberg.de
license = MIT License
license_file = LICENSE.md
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3


[options]
package_dir=
    =src
packages=find:
install_requires =
    numpy

[options.packages.find]
where=src
